--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,7 +1,11 @@
 ---
 layout: archive
 ---
-
+<style>
+  .page__title a {
+      text-decoration: underline !important;
+  }
+</style>
 {{ content }}
 
 <ul class="taxonomy__index">
