--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -5,6 +5,12 @@ layout: default
   .page__title{
       text-decoration: underline !important;
   }
+  a.reversefootnote{
+    color: black !important;
+  }
+  .footnotes ol, .footnotes li, .footnotes p{
+    color: #0092CA;
+  }
 </style>
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
