--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,15 @@
     {% include head/custom.html %}
   </head>
 <style>
+  @media screen and (max-width: 1050px){
+    .author__avatar img {
+    max-width: 100px !important;
+    border-radius: 50%;
+    margin-left: 0px !important;
+}
+  }
+    
+  
    .author__avatar img {
     max-width: 178px !important;
     border-radius: 50%;
