--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,17 +16,17 @@
 <style>
   @media screen and (max-width: 1050px){
     .author__avatar img {
-    max-width: 100px !important;
+    max-width: 100px;
     border-radius: 50%;
-    margin-left: 0px !important;
+    margin-left: 0px;
 }
   }
     
   
    .author__avatar img {
-    max-width: 140px !important;
+    max-width: 140px;
     border-radius: 50%;
-    margin-left: 30px !important;
+    margin-left: 30px;
 }
 </style>
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
