--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
 <style>
   @media screen and (max-width: 1050px){
     .author__avatar img {
-    max-width: 100px;
+    max-width: 100px !important;
     border-radius: 50%;
-    margin-left: 0px;
+    margin-left: 0px !important;
 }
   }
     
