--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     .author__avatar img {
     max-width: 100px !important;
     border-radius: 50%;
+    margin-top: 20px;
     margin-left: 0px !important;
 }
   }
