--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,12 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
+<meta name="msapplication-TitleColor" content="#da532c">
+<meta name="theme-color" content="#fffff">
+
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-<link rel="shortcut icon" href="https://www.emojiall.com/images/svg/emojitwo/1f331.svg" type="image/x-icon">
+<link rel="mask-icon" href="{{ '/assets/images/safari-pinned-tab.svg' | relative_url }} " type="image/x-icon" color="#5bbad5">
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css"></noscript>
 
