--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-<link rel="mask-icon" href="{{ '/assets/images/safari-pinned-tab.svg' | relative_url }} " type="image/x-icon" color="#5bbad5">
+<link rel="mask-icon" href="/lwa/assets/images/safari-pinned-tab.svg" type="image/x-icon" color="#5bbad5">
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css"></noscript>
 
