--- a/assets/css/main 2.scss
+++ b/assets/css/main 2.scss
@@ -7,3 +7,7 @@ $max-width:90%;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+.page{
+    padding-right: 0px !important;
+}
