--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -12,6 +12,9 @@ layout: default
   .footnotes ol, .footnotes li, .footnotes p{
     color: #0092CA;
   }
+  .page{
+    padding-right: 0px !important;
+  }
 </style>
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
