--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
     border-radius: 50%;
     margin-left: 45px;
 }
+.archive{
+  padding: 0px 70px 0px 10px !important;
+}
 </style>
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
