--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,4 +6,5 @@ search: false
 $max-width:90%;
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "/_sass/minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
