--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@ $max-width:90%;
 $masthead-background-color: green;
 $footer-background-color: green;
 $footer-link-color: white;
+$footer-text-color: white;
 $link-color: green;
   
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
