--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,10 +5,11 @@ search: false
 
 $max-width:90%;
 
-$masthead-background-color: green;
 $footer-background-color: green;
 $link-color: green;
 
+.author__urls.social-icons i,
+.author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
   color: white;
