--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,10 +8,12 @@ $max-width:90%;
 $footer-background-color: green;
 $link-color: green;
 
-.author__urls.social-icons i,
-.author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
+  color: white;
+}
+
+.footer {
   color: white;
 }
 
