--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,8 +5,8 @@ search: false
 
 $max-width:90%;
 
-$footer-background-color: green;
-$link-color: green;
+$footer-background-color: #008800;
+$link-color: #008800;
 
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
