--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,12 +8,10 @@ $max-width:90%;
 $footer-background-color: #008800;
 $link-color: #008800;
 
+
+.page__footer,
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
-  color: white;
-}
-
-.footer {
   color: white;
 }
 
