--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,8 @@ $footer-background-color: #008800;
 $link-color: #008800;
 
 
-.page__footer,
+.page__footer-copyright,
+.page__footer a,
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
   color: white;
