--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,8 @@ $link-color: #008800;
 $masthead-link-color: #008800;
 
 .page__footer-copyright,
-.page__footer a,
+.page__footer-follow .social-icons a,
+.page__footer-follow .social-icons li,
 .page__footer-follow .social-icons i,
 .page__footer-follow .social-icons .svg-inline--fa  {
   color: white;
