--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,7 @@ $masthead-link-color: #008800;
   color: white;
 }
 
+.author__urls.social-icons .svg-inline--fa,
 .masthead,
 .masthead a {
   color: #008800;
