--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@ $masthead-link-color: #008800;
 }
 
 .page__title h1 {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .author__urls.social-icons .svg-inline--fa,
