--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,6 +19,7 @@ $masthead-link-color: #008800;
 
 .page__title h1 {
   text-decoration: none !important;
+  text-decoration-line: none !important;
 }
 
 .author__urls.social-icons .svg-inline--fa,
