--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,7 +31,6 @@ $masthead-link-color: #008800;
     font-size: .9em !important; // Between type-size-5 and type-size-6
 }
 
-.page__title h1 {
-  text-decoration: none !important;
-  text-decoration-line: none !important;
+.page__title {
+        text-decoration: none !important;
 }
