resolve underline issue

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -4,7 +4,7 @@ layout: default
 <style>
   
   .page__title{
-      text-decoration: underline !important;
+      text-decoration: none !important;
   }
   a.reversefootnote{
     color: black !important;
