resolve underline issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 }
   }
     
-  
+  .page__title{
+      text-decoration: none !important;
+  }
    .author__avatar img {
     max-width: 140px;
     border-radius: 50%;
