resolve underline issue

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <style>
   
-  .page__title{
+  .wrapper .page__title{
       text-decoration: none !important;
   }
   a.reversefootnote{
