--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,13 @@
 .archive{
   padding: 0px 70px 0px 10px !important;
 }
+.page__hero--overlay{
+  background-color: #4a9bb1c7;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: multiply;
+  color: #fff;
+}
 </style>
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
