change footer background

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@ search: false
 
 $max-width:90%;
 
-$footer-background-color: #008800;
+$footer-background-color: #1d682a;
 $link-color: #008800;
 $masthead-link-color: #008800;
 
