--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,7 @@ search: false
 
 $max-width:90%;
 
-$footer-background-color: #05A069;
+$footer-background-color: #0a4b11;
 $link-color: #0950bb;
 $masthead-link-color: #05A069;
 
