--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,6 +75,7 @@ margin-left: 0px !important;
 .wrapper .page__title {
   text-decoration: none !important;
   text-shadow: 6px 6px 15px #000000;
+  font-size: 46px;
 }
   .page__hero--overlay .page__lead {
     max-width: 768px;
@@ -108,6 +109,9 @@ background-color: #08835834;
 }
 .introduction{
   font-size: 20px !important;
+}
+#main{
+  margin-left: 0px !important;
 }
 footer{
   background: url(/assets/images/mm-single-header-orlay-fill-example.jpg);
