--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,6 @@
     </div>
 
     {% include scripts.html %}
-
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
