--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -368,3 +368,9 @@ background-blend-mode: multiply;
     color: #557f80;
   }
  }
+ @media (min-width: 64em){
+.sidebar.sticky {
+    overflow-y: auto;
+    max-height: calc(100vh - 1em - 2em);
+}
+}
