--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -116,6 +116,7 @@ font-size: 12px !important;
   color: #fff;
   padding: 45px 0px 45px 85px !important;
   opacity: 1 !important;
+  margin-top: 92px;
 }
 .wrapper .page__title {
   text-decoration: none !important;
@@ -153,6 +154,7 @@ font-size: 20px;
   color: #fff;
   padding: 45px 0px 45px 15px !important;
   opacity: 1 !important;
+  margin-top: 50px;
 }
 }
 
