--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -41,14 +41,14 @@
       {% endif %}
       {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
       {% if page.last_modified_at %}
-      <p class="page__date"><strong><i class="fas fa-upload" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time class="dt-published" datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: date_format }}</time></p>
+      <p class="page__date"><strong><i class="fas fa-upload" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published Date:" }}</strong> <time class="dt-published" datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: date_format }}</time></p>
       {% elsif page.date %}
-      <p class="page__date"><strong><i class="fas fa-upload" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: date_format }}</time></p>
+      <p class="page__date"><strong><i class="fas fa-upload" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published Date:" }}</strong> <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: date_format }}</time></p>
       {% endif %}
       {% if page.header.actions %}
         <p>
         {% for action in page.header.actions %}
-          <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large"><span><i class="fas fa-hand-point-right"></i>     </span>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
+          <a href="{{ action.url | relative_url }}" class="btn btn--light-outline btn--large"><span><i class="fas fa-portrait"></i>     </span>{{ action.label | default: site.data.ui-text[site.locale].more_label | default: "Learn More" }}</a>
         {% endfor %}
       {% endif %}
     </div>
