--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -398,3 +398,58 @@ background-blend-mode: multiply;
       opacity: 1 !important;
   }
   }
+
+/* About us styling */
+.about-div {
+  background-image: linear-gradient(#b2f4dd, rgb(141, 252, 232));
+  border: 1px dashed #097d54;
+  padding: 25px 20px 25px 20px;
+  border-radius: 7px;
+  box-shadow: 10px 10px 40px #caf1e3;
+}
+.introduction{
+  border: 1px dashed #097d54;
+  border-radius: 7px;
+  padding: 25px 20px 15px 20px;
+  background-color: #2fcd96;
+  box-shadow: 10px 10px 40px #caf1e3;
+}
+.added-intro{
+  border: 1px dashed #097d54;
+  border-radius: 7px;
+  padding: 0px 20px 15px 20px;
+  margin-bottom: 20px;
+  background-color: #2fcd96;
+  box-shadow: 10px 10px 40px #caf1e3;
+}
+.added-intro h2{
+  border: 1px dashed #097d54;
+  padding: 10px 10px 10px 10px;
+  border-radius: 7px;
+}
+.added-intro li{
+  background-color: #b0f9e0;
+  border: 1px dashed #097d54;
+  padding: 10px 10px 10px 10px;
+  border-radius: 7px;
+ margin-left: -20px;
+}
+.line-intro{
+  display: block;
+  margin: 1em 0;
+  border: 9;
+  border-radius: 2px;
+  border-top: 5px solid #05A069;
+  margin-top: 30px;
+}
+
+.see-more-button{
+  padding: 10px 10px 10px 10px;
+  background-color: #46e7ae;
+  color: white;
+  border-radius: 5px;
+}
+.see-more-button:hover{
+  background-color: #2fcd96;
+
+}
