--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -451,5 +451,21 @@ background-blend-mode: multiply;
 }
 .see-more-button:hover{
   background-color: #2fcd96;
-
 }
+.wrapper #page-title {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 5px solid  #05A069; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 5px; /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
