--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -454,7 +454,13 @@ background-blend-mode: multiply;
 }
 
 /* Post styling */
-
+.page__taxonomy strong {
+  margin-right: 10px;
+  background-color: #5cf9c2;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px;
+}
 .page__content h2 h3{
   display: block;
   margin-top: 30px !important;
@@ -462,4 +468,10 @@ background-blend-mode: multiply;
   padding: 10px 20px 10px 20px !important;
   border: 1px dashed #49b9de !important;
   border-radius: 5px;
+}
+.page__meta .page__taxonomy-item{
+  background-color: #5cf9c2;
+  border: 1px dashed #05A069;
+  border-radius: 3px;
+  padding: 0px 10px 0px 10px; 
 }
