--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -461,7 +461,15 @@ background-blend-mode: multiply;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
 }
-.page__content h2 h3{
+.page__content h2{
+  display: block;
+  margin-top: 30px !important;
+  background-color: rgb(212, 255, 241) !important;
+  padding: 10px 20px 10px 20px !important;
+  border: 1px dashed #49b9de !important;
+  border-radius: 5px;
+}
+.page__content h3{
   display: block;
   margin-top: 30px !important;
   background-color: rgb(212, 255, 241) !important;
@@ -474,4 +482,12 @@ background-blend-mode: multiply;
   border: 1px dashed #05A069;
   border-radius: 3px;
   padding: 0px 10px 0px 10px; 
+}
+.page__date strong, .dt-published{
+  display: block;
+  margin-top: 30px !important;
+  background-color: rgb(212, 255, 241) !important;
+  padding: 10px 20px 10px 20px !important;
+  border: 1px dashed #49b9de !important;
+  border-radius: 5px;
 }
